# vpk-rs

./: .gitignore  Cargo.toml  README.md
benches/: iai.rs  parse.rs
examples/: extract.rs  list.rs
src/: bundle.rs  entry.rs  file.rs  header.rs  index.rs  lib.rs  reader.rs  structs.rs  vpk.rs
